Add 'apply plugin'

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 22
